[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "rich>=14.3.3",
    "ruamel-yaml>=0.19.1",
    "setuptools<70.0.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools]
package-dir = {"" = "."}
